--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "express": "^4.16.4",
+    "serve-static": "^1.13.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
